NET MAUI DS 7.0: API Docs Update

--- a/net/v7.0.0/manifest.json
+++ b/net/v7.0.0/manifest.json
@@ -3442,6 +3442,20 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.ErrorMessages.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.ErrorMessages.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "ScanbotSDK.MAUI.Common.ErrorMessages",
+      "Summary": null
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.Field.yml",
       "output": {
         ".html": {
