--- a/barcode-scanner-sdk/net/v.7.1.0/manifest.json
+++ b/barcode-scanner-sdk/net/v.7.1.0/manifest.json
@@ -3358,6 +3358,20 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.IMockCamera.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.IMockCamera.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "ScanbotSDK.MAUI.Common.IMockCamera",
+      "Summary": null
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.IconButton.yml",
       "output": {
         ".html": {
@@ -3565,6 +3579,20 @@
       "IsMRef": true,
       "Title": "ScanbotSDK.MAUI.Common.LineSegmentInt",
       "Summary": "<p sourcefile=\"api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.LineSegmentInt.yml\" sourcestartlinenumber=\"1\">Represents a line segment in 2D space.</p>\n"
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.MockCameraConfiguration.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.Common.MockCameraConfiguration.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "ScanbotSDK.MAUI.Common.MockCameraConfiguration",
+      "Summary": null
     },
     {
       "type": "ManagedReference",
@@ -4198,6 +4226,20 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.ScanbotSDKMain.Detector.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.ScanbotSDKMain.Detector.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "ScanbotSDK.MAUI.ScanbotSDKMain.Detector",
+      "Summary": null
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.ScanbotSDKMain.Detectors.yml",
       "output": {
         ".html": {
@@ -4221,7 +4263,7 @@
       "version": "",
       "Uid": null,
       "IsMRef": true,
-      "Title": "ScanbotSDK.MAUI.ScanbotSDKMain.RTU",
+      "Title": "ScanbotSDK.MAUI.ScanbotSDKMain.Rtu",
       "Summary": null
     },
     {
@@ -22799,6 +22841,62 @@
       "Uid": null,
       "IsMRef": true,
       "Title": "IO.Scanbot.Sdk",
+      "Summary": null
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/ScanbotSDK.NET.Droid/IO.Scanbot.Tools.Utils.BuildConfig.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/ScanbotSDK.NET.Droid/IO.Scanbot.Tools.Utils.BuildConfig.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "IO.Scanbot.Tools.Utils.BuildConfig",
+      "Summary": null
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/ScanbotSDK.NET.Droid/IO.Scanbot.Tools.Utils.ImageUtils.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/ScanbotSDK.NET.Droid/IO.Scanbot.Tools.Utils.ImageUtils.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "IO.Scanbot.Tools.Utils.ImageUtils",
+      "Summary": null
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/ScanbotSDK.NET.Droid/IO.Scanbot.Tools.Utils.KotlinExtensionsKt.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/ScanbotSDK.NET.Droid/IO.Scanbot.Tools.Utils.KotlinExtensionsKt.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "IO.Scanbot.Tools.Utils.KotlinExtensionsKt",
+      "Summary": null
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/ScanbotSDK.NET.Droid/IO.Scanbot.Tools.Utils.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/ScanbotSDK.NET.Droid/IO.Scanbot.Tools.Utils.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "IO.Scanbot.Tools.Utils",
       "Summary": null
     },
     {
